properties-window: Only perform deep count for directories

Prevent the spinner running endlessly when files are selected by only
starting the deep count for directories.

https://bugzilla.gnome.org/show_bug.cgi?id=703349